<resources>
    <string name="app_name">SmartMoney</string>
    <string name="title_loan">Займы</string>
    <string name="title_notification">Уведомления</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="remember_login">Запомнить логинь</string>
    <string name="login_by_code">Вход по пин-коду</string>
    <string name="login_by_fingerprint">Вход с помощью отпечатка</string>
    <string name="forgot_password">Забыли пароль ?</string>
    <string name="registration">Регистрация</string>
    <string name="next">Далее</string>
    <string name="enter_number">Введите номер телефона и нажмите "Далее"</string>
    <string name="country_code">Код страны</string>
    <string name="number_phone">Номер телефона</string>
    <string name="available_country_list">Список доступных стран</string>
    <string name="close">Закрыть</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_format">Неверный формат</string>
    <string name="name">Имя</string>
    <string name="choose_password">Выберите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="choose_question">Выберите секретный вопрос</string>
    <string name="answer_question">Ответ на вопрос</string>
    <string name="agree_with">Я согласен с <font color='#F09236'>условиями</font> обработки персональных данных</string>
    <string name="registration_now">Зарегистрироваться</string>
    <string name="already_registered">Уже зарегистрированы ?</string>
    <string name="surname">Фамилия</string>
    <string name="second_name">Отчество</string>
    <string name="born_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="nationality">Национальность</string>
    <string name="traffic_source">Где вы узнали о нас</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="warning_empty">Обязательное поле</string>
    <string name="accept">Подтвердить</string>
    <string name="success_check_number">Вы успешно прошли регистрацию. Введите код из смс поле ниже и нажмите "Продолжить".</string>
    <string name="sms_code_example">1234</string>
    <string name="wrong_sms_code">Неверный смс код</string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="secret_word">Кодове слово</string>
    <string name="success_credit">Спасибо! \nВы успешно заполнили заявку на заём \n\nВ течение 24 часа Вам придет уведомление о решении</string>
    <string name="accept_report">Ваша заявка получена</string>
    <string name="ready">Готово</string>
    <string name="success_auth">Вы успешно прошли регистрацию!</string>
    <string name="loginpas_sms">Логин и пароль будут высланы Вам по смс</string>
    <string name="success_restore">Доступ успешно восстановлен</string>
    <string name="fingerprint_title">Вход по отпечаткам пальца</string>
    <string name="cancel">Отменить</string>
    <string name="fingerprint_login">Войти с помощью отпечатки пальцев</string>
    <string name="pin_code">Пин-код</string>
    <string name="repeat_pin_code">Повторите пин-код</string>
    <string name="continue_">Продолжить</string>
    <string name="title_profile">Профиль</string>
    <string name="title_support">Поддержка</string>
    <string name="title_more">Еще</string>
    <string name="balance">Остаток:</string>
    <string name="paid">Уже оплачено:</string>
    <string name="make_repayment">Внести погашение</string>
    <string name="have_not_loan">У вас нет активного займа</string>
    <string name="news">Новость</string>
    <string name="description_notice">Описание уведомления</string>
    <string name="login_btn">Войти</string>
</resources>