<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/nav_loan"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_loan" />-->

    <item
        android:id="@+id/nav_loan"
        android:icon="@drawable/ic_wallet"
        android:title="@string/title_loan" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_support"
        android:title="@string/title_support" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu>