<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_loan">

    <fragment
        android:id="@+id/nav_loan"
        android:name="com.molbulak.smartmoney.ui.loan.LoanFragment"
        android:label="@string/title_loan"
        tools:layout="@layout/fragment_loan" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.molbulak.smartmoney.ui.notification.NoticeFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.molbulak.smartmoney.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.molbulak.smartmoney.ui.support.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.molbulak.smartmoney.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>