<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="116dp"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="@dimen/big_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="@string/enter"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="12dp"
            android:theme="@style/LoginInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginInput"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:text="@string/remember_password"
            android:theme="@style/MyCheckBox"
            android:layout_marginTop="@dimen/default_margin" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginTop="@dimen/small_margin"
            android:theme="@style/MyCheckBox"
            android:text="@string/login_by_code" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:theme="@style/MyCheckBox"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/login_by_fingerprint"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_login_btn"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/next"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:padding="6dp"
            android:text="@string/forgot_password"
            android:textColor="@color/orange_main" />

        <TextView
            android:id="@+id/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/registration"
            android:textColor="@color/orange_main" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>