<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.check_number.CheckNumberFragment">


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/default_margin"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="@string/registration"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/enter_number"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/default_margin"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/country_drop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:clickable="false"
                android:drawableEnd="@drawable/ic_drop_down"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/country_code"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/small_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/bg_input"
            android:hint="@string/number_phone"
            android:paddingStart="@dimen/default_margin"
            android:textSize="12sp" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/bg_default_btn"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/next"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>