<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.auth.AuthFragment">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/default_margin"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:gravity="center_horizontal"
                android:text="@string/registration"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_input"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/small_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="@dimen/small_text" />

            <EditText
                android:id="@+id/surname_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                android:inputType="text"
                android:background="@drawable/bg_input"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/small_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="@dimen/small_text" />

            <EditText
                android:id="@+id/second_name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_input"
                android:inputType="text"
                android:hint="@string/second_name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/small_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="@dimen/small_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/gender_db"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_weight="0.2"
                    android:background="@drawable/bg_input"
                    android:drawableEnd="@drawable/ic_drop_down"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/gender"
                    android:maxLines="1"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingEnd="@dimen/small_margin"
                    android:textCursorDrawable="@drawable/bg_cursor_orange"
                    android:textSize="@dimen/small_text" />

                <EditText
                    android:id="@+id/born_date"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_weight="0.8"
                    android:background="@drawable/bg_input"
                    android:drawableEnd="@drawable/ic_date"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/born_date"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingEnd="@dimen/small_margin"
                    android:textCursorDrawable="@drawable/bg_cursor_orange"
                    android:textSize="@dimen/small_text" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/nationality_db"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_input"
                    android:clickable="false"
                    android:drawableEnd="@drawable/ic_drop_down"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/nationality"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingEnd="@dimen/small_margin"
                    android:textCursorDrawable="@drawable/bg_cursor_orange"
                    android:textSize="@dimen/small_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/number_phone_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_input"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/number_phone"
                android:maxLines="1"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/small_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="@dimen/small_text" />

            <EditText
                android:id="@+id/number_phone_two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_input"
                android:hint="Доп. номер телефона"
                android:maxLines="1"
                android:paddingStart="@dimen/default_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="@dimen/small_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/question_db"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_input"
                    android:clickable="false"
                    android:drawableEnd="@drawable/ic_drop_down"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/choose_question"
                    android:paddingStart="@dimen/default_margin"
                    android:paddingEnd="@dimen/small_margin"
                    android:textCursorDrawable="@drawable/bg_cursor_orange"
                    android:textSize="@dimen/small_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/answer_question"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_input"
                android:hint="@string/answer_question"
                android:maxLines="1"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/small_margin"
                android:textCursorDrawable="@drawable/bg_cursor_orange"
                android:textSize="@dimen/small_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/agree_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:theme="@style/MyCheckBox"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/agree_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:text="@string/agree_with"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@id/agree_cb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/agree_cb"
                    app:layout_constraintTop_toTopOf="@id/agree_cb" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/auth_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_default_btn"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/registration_now"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/registered_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:padding="@dimen/small_margin"
                android:text="@string/already_registered"
                android:textColor="@color/orange_main"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>